[package]
name = "catsay"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Luz <pedromsluz@gmail.com>"]
description = "A terminal command for cats"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
colored = "2.0.0"
failure = "0.1.8"
assert_cmd = "2.0.4"
predicates = "2.1.1"
